src/objects/CntrbnMdl_Jive__c.object
<CustomObject>
    <fields>
        <fullName>ActiveCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ActiveCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContributingCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ContributingCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParticipatingCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ParticipatingCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CntrbnMdl_Jive</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contribution Model Jive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ActiveCount__c</columns>
        <columns>ContributingCount__c</columns>
        <columns>Month__c</columns>
        <columns>ParticipatingCount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JN-{0000000}</displayFormat>
        <label>Jive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution Model Jive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>